# file_parsing

./: .gitignore  CMakeLists.txt
src/: filereader.h  main.cpp
